# PySXB

./: .gitignore  README.md  baird.py  main.py  pyproject.toml  setup.cfg  test.rom
src/PySXB/: pysxb.py
