[metadata]
name = pysxb
description = Interface for the WDC Developer Boards (WDC65C816SXB and WDC65C02SXB)
author = David Couples
license = GPL v3+
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
version = 0.0.1

[options]
packages = PySXB

include_package_data = True
install_requires =
    pyserial
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
pysxb = py.typed

[flake8]
max-line-length = 120

